[gd_scene load_steps=5 format=3 uid="uid://k1gov8ve7f8n"]

[ext_resource type="Texture2D" uid="uid://odg7600ijk4t" path="res://Assets/Textures/door.png" id="1_lx8r7"]
[ext_resource type="Script" uid="uid://cvu0yio47ss86" path="res://Scripts/door.gd" id="2_rwav3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rwav3"]
albedo_texture = ExtResource("1_lx8r7")
uv1_scale = Vector3(-1, 1, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_lx8r7"]
height = 5.0
radius = 3.0

[node name="Door" type="CSGBox3D"]
material_override = SubResource("StandardMaterial3D_rwav3")
size = Vector3(5, 5, 1)
script = ExtResource("2_rwav3")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_lx8r7")

[node name="DoorUI" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="DoorUI"]
visible = false
offset_left = 472.0
offset_top = 243.0
offset_right = 803.0
offset_bottom = 336.0
theme_override_font_sizes/font_size = 32
text = "Door is locked!
You need: 500 monies!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
